[workspace]
resolver = "2"
members = [
    "core/*",
    "bindings/*"
]

[workspace.dependencies]
ahash = "0.8.11"
bumpalo = "3.16.0"
chrono = "0.4.38"
criterion = "0.5.1"
fastrand = "2.1.0"
humantime = "2.1.0"
tokio = "1.39.3"
tokio-util = "0.7.11"
once_cell = "1.19.0"
petgraph = "0.7.0"
phf = "0.11.2"
regex = "1.10.6"
regex-lite = "0.1.6"
strum = "0.26.2"
strum_macros = "0.26.2"
serde = "1.0.208"
serde_json = "1.0.126"
itertools = "0.13.0"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
json_dotpath = "1.1.0"

anyhow = "1.0.86"
thiserror = "1.0.63"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"