[workspace]
resolver = "2"
members = [
    "core/*",
    "bindings/*"
]

[workspace.dependencies]
ahash = "0.8"
bumpalo = "3"
chrono = "0.4"
criterion = "0.5"
fastrand = "2"
humantime = "2"
tokio = "1"
tokio-util = "0.7"
once_cell = "1"
petgraph = "0.8"
recursive = "0.1"
regex = "1"
regex-lite = "0.1"
strum = "0.27"
strum_macros = "0.27"
serde = "1"
serde_json = "1"
rust_decimal = "1"
rust_decimal_macros = "1"
json_dotpath = "1"
nohash-hasher = "0.2"

anyhow = "1"
thiserror = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

# Fast profile for PR/CI validation builds ONLY — never ships.
# Same opt-level as release (behaviourally identical) but no LTO and parallel
# codegen, so PR builds are ~2-4x faster. Release artifacts keep `--release`.
[profile.ci]
inherits = "release"
lto = false
codegen-units = 16