[package]
name = "zen-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
libc = "0.2.145"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.26.1", features = ["derive"] }
futures = "0.3.28"
zen-engine = { path = "../../core/engine" }
zen-expression = { path = "../../core/expression" }
zen-template = { path = "../../core/template" }

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.26.0"

[features]
default = ["go"]
go = []