[package]
name = "zen-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = { workspace = true }
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt"] }
zen-engine = { path = "../../core/engine" }
zen-expression = { path = "../../core/expression" }
zen-tmpl = { path = "../../core/template" }

[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
cbindgen = "0.28"

[features]
default = ["go"]
go = []