[package]
name = "zen-nodejs"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.3.0", features = ["serde-json", "error_anyhow", "tokio_rt", "compat-mode"] }
napi-derive = "3.2.5"
tokio-util = { workspace = true, features = ["rt"] }
serde_json = { workspace = true }
zen-engine = { path = "../../core/engine" }
zen-expression = { path = "../../core/expression" }
zen-tmpl = { path = "../../core/template" }
serde = { workspace = true, features = ["derive"] }
json_dotpath = { workspace = true }

[build-dependencies]
napi-build = "2.1"