[package]
name = "zen-nodejs"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = { workspace = true }
napi = { version = "3", features = ["serde-json", "error_anyhow", "tokio_rt"] }
napi-derive = "3"
tokio-util = { workspace = true, features = ["rt"] }
serde_json = { workspace = true }
zen-engine = { path = "../../core/engine" }
zen-expression = { path = "../../core/expression" }
zen-tmpl = { path = "../../core/template" }
serde = { workspace = true, features = ["derive"] }
json_dotpath = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
iana-time-zone = { version = "0.1", features = ["fallback"] }

[build-dependencies]
napi-build = "2.2"