[package]
name = "zen-python"
version = "0.37.1"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "zen"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
either = "1.13"
pyo3 = { version = "0.23", features = ["anyhow", "serde"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
pythonize = "0.23"
json_dotpath = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
zen-engine = { path = "../../core/engine" }
zen-expression = { path = "../../core/expression" }
zen-tmpl = { path = "../../core/template" }
