[package]
authors = ["GoRules Team <bot@gorules.io>"]
description = "Business rules engine"
name = "zen-engine"
license = "MIT"
version = "0.51.0"
edition = "2021"
repository = "https://github.com/gorules/zen.git"

[lib]
doctest = false

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
serde = { workspace = true, features = ["derive", "rc"] }
strum = { workspace = true, features = ["derive"] }
once_cell = { workspace = true }
json_dotpath = { workspace = true }
rust_decimal = { workspace = true, features = ["maths-nopanic"] }
fixedbitset = "0.5"
tokio = { workspace = true, features = ["sync", "time"] }
http = { version = "1.3" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rquickjs = { version = "0.9", features = ["macro", "loader", "rust-alloc", "futures", "either", "properties"] }
rquickjs-serde = { version = "0.1" }
jsonschema = "0.29"
zen-types = { path = "../types", version = "0.51.0" }
zen-expression = { path = "../expression", version = "0.51.0" }
zen-tmpl = { path = "../template", version = "0.51.0" }

# HTTP Auth IAM
async-trait = "0.1"
reqsign = { version = "0.17", features = ["aws", "azure", "google", "default-context"] }
sha2 = "0.10"

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion = { workspace = true, features = ["async_tokio"] }
insta = { version = "1.43", features = ["yaml", "redactions"] }

[[bench]]
harness = false
name = "engine"

[features]
bindgen = ["rquickjs/bindgen"]