[package]
authors = ["GoRules Team <bot@gorules.io>"]
description = "Zen Expression Language"
name = "zen-expression"
license = "MIT"
version = "0.40.0"
edition = "2021"
repository = "https://github.com/gorules/zen.git"

[dependencies]
ahash = { workspace = true }
bumpalo = { workspace = true, features = ["collections"] }
chrono = { workspace = true }
humantime = { workspace = true }
fastrand = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true, optional = true }
regex-lite = { workspace = true, optional = true }
serde = { workspace = true, features = ["rc", "derive"] }
serde_json = { workspace = true, features = [] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true, features = ["maths-nopanic"] }
rust_decimal_macros = { workspace = true }
nohash-hasher = "0.2.0"
strsim = "0.11.1"

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
csv = "1.3.0"
serde_json5 = "0.1.0"

[features]
default = ["regex-deprecated"]
regex-deprecated = ["dep:regex"]
regex-lite = ["dep:regex-lite"]
arbitrary_precision = ["serde_json/arbitrary_precision"]

[[bench]]
harness = false
name = "lexer"

[[bench]]
harness = false
name = "standard"

[[bench]]
harness = false
name = "unary"

[[bench]]
harness = false
name = "isolate"
