[package]
name = "expression_repl"
version = "0.15.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
rustyline = "12.0.0"
serde_json = "1.0.108"
zen-expression = { path = "../expression", version = "0.15.1" }
