[package]
name = "expression_repl"
version = "0.37.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
rustyline = "14.0.0"
serde_json = { workspace = true }
zen-expression = { path = "../expression", version = "0.37.0" }

