[package]
name = "zen-parser"
version = "0.1.2"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
ahash = { workspace = true }
bumpalo = { workspace = true }
once_cell = { workspace = true }
phf = { workspace = true, features = ["macros"] }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
harness = false
name = "unary"

[[bench]]
harness = false
name = "standard"

[[bench]]
harness = false
name = "lexer"