[package]
authors = ["GoRules Team <bot@gorules.io>"]
description = "Zen expression language parser"
name = "zen-parser"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gorules/zen.git"

[dependencies]
ahash = { workspace = true }
bumpalo = { workspace = true }
once_cell = { workspace = true }
phf = { workspace = true, features = ["macros"] }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
harness = false
name = "unary"

[[bench]]
harness = false
name = "standard"

[[bench]]
harness = false
name = "lexer"