[package]
authors = ["GoRules Team <bot@gorules.io>"]
description = "Zen Template Language"
name = "zen-tmpl"
license = "MIT"
version = "0.38.0"
edition = "2021"
repository = "https://github.com/gorules/zen.git"

[dependencies]
zen-expression = { path = "../expression", version = "0.38.0" }
itertools = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }