[package]
authors = ["GoRules Team <bot@gorules.io>"]
description = "Zen Template Language"
name = "zen-tmpl"
license = "MIT"
version = "0.51.2"
edition = "2021"
repository = "https://github.com/gorules/zen.git"

[dependencies]
zen-expression = { path = "../expression", version = "0.51.2" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["regex-deprecated"]

regex-lite = ["zen-expression/regex-lite"]
regex-deprecated = ["zen-expression/regex-deprecated"]