[package]
authors = ["GoRules Team <bot@gorules.io>"]
description = "Zen Template Language"
name = "zen-tmpl"
license = "MIT"
version = "1.0.0-beta.8"
edition = "2021"
repository = "https://github.com/gorules/zen.git"

[dependencies]
zen-expression = { path = "../expression", version = "1.0.0-beta.8" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["regex-deprecated"]

regex-lite = ["zen-expression/regex-lite"]
regex-deprecated = ["zen-expression/regex-deprecated"]
arbitrary_precision = ["zen-expression/arbitrary_precision"]