[package]
name = "zen-types"
version = "0.50.0"
edition = "2024"

[dependencies]
ahash = { workspace = true }
serde = { workspace = true, features = ["rc", "derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
rust_decimal = { workspace = true, features = ["maths-nopanic"] }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
nohash-hasher = "0.2.0"
