[package]
name = "zen-types"
description = "Zen Core Types"
version = "0.52.1"
edition = "2024"
license = "MIT"

[dependencies]
ahash = { workspace = true }
serde = { workspace = true, features = ["rc", "derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
rust_decimal = { workspace = true, features = ["maths-nopanic"] }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
nohash-hasher = { workspace = true }
