[package]
name = "zen-vm"
version = "0.1.2"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
ahash = { workspace = true }
bumpalo = { workspace = true }
chrono = { workspace = true }
hashbrown = { workspace = true, features = ["bumpalo"] }
humantime = { workspace = true }
fastrand = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
thiserror = { workspace = true }
rust_decimal = { workspace = true, features = ["maths-nopanic"] }
rust_decimal_macros = { workspace = true }
zen-parser = { path = "../parser" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
harness = false
name = "isolate"