[package]
authors = ["GoRules Team <bot@gorules.io>"]
description = "Zen expression language virtual machine"
name = "zen-vm"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gorules/zen.git"


[dependencies]
ahash = { workspace = true }
bumpalo = { workspace = true }
chrono = { workspace = true }
hashbrown = { workspace = true, features = ["bumpalo"] }
humantime = { workspace = true }
fastrand = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
thiserror = { workspace = true }
rust_decimal = { workspace = true, features = ["maths-nopanic"] }
rust_decimal_macros = { workspace = true }
zen-parser = { path = "../parser" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
harness = false
name = "isolate"